# api2mdx

./: .gitignore  README.md  pyproject.toml
api2mdx/: api_discovery.py  api_discovery_test.py  documentation_generator.py  griffe_integration.py  main.py  mdx_components.py  mdx_renderer.py  meta.py  models.py  type_extractor.py  type_model.py  type_urls.py
api2mdx/scripts/: regenerate_snapshots.py
snapshots/directives/: Agent.md  AsyncAgent.md  AsyncCall.md  AsyncStream.md  AsyncStructuredAgent.md  AsyncStructuredCall.md  AsyncStructuredStream.md  Call.md  Client.md  Content.md  Context.md  DynamicConfig.md  LLM.md  Message.md  Params.md  Response.md  ResponseFormat.md  Stream.md  StreamChunk.md  StructuredAgent.md  StructuredCall.md  StructuredStream.md  Tool.md  ToolDef.md  _symbols.md  agent-fn.md  assistant.md  call-fn.md  calls.md  index.md  model.md  prompt_template.md  response_format.md  system.md  tool-fn.md  user.md
snapshots/mdx/: Agent.mdx  AsyncAgent.mdx  AsyncCall.mdx  AsyncStream.mdx  AsyncStructuredAgent.mdx  AsyncStructuredCall.mdx  AsyncStructuredStream.mdx  Call.mdx  Client.mdx  Content.mdx  Context.mdx  DynamicConfig.mdx  LLM.mdx  Message.mdx  Params.mdx  Response.mdx  ResponseFormat.mdx  Stream.mdx  StreamChunk.mdx  StructuredAgent.mdx  StructuredCall.mdx  StructuredStream.mdx  Tool.mdx  ToolDef.mdx  _meta.json  _meta.ts  agent-fn.mdx  agents.mdx  assistant.mdx  call-fn.mdx  calls.mdx  content.mdx  index.mdx  model.mdx  prompt_template.mdx  response_format.mdx  responses.mdx  system.mdx  tool-fn.mdx  user.mdx
snapshots/mdx/agents/: agent.mdx  (+1 more)
(+563 files in other folders)
