[project]
name = "api2mdx"
version = "0.1.0"
description = "Generate MDX API documentation from Python source code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core dependencies
    "griffe>=1.7.2",
    "pymdown-extensions>=10.5.0",
]


[tool.uv]
dev-dependencies = [
    "pyright>=1.1.396",
    "ruff>=0.1.6",
    "pytest>=8.3.5",
]

[tool.pyright]
include = [
    "api2mdx"
]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
]
